--- a/3D-Engine/Game/imgui.ini
+++ b/3D-Engine/Game/imgui.ini
@@ -3,53 +3,23 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Hello World!]
+Pos=60,60
+Size=423,183
+Collapsed=0
+
 [Window][ImGui Demo]
-Pos=92,71
-Size=542,848
+Pos=661,29
+Size=550,680
 Collapsed=0
 
-[Window][Hello, world!]
-Pos=839,316
-Size=344,180
+[Window][MathGeoLib]
+Pos=60,296
+Size=500,187
 Collapsed=0
 
-[Window][ImGui Metrics]
-Pos=158,287
-Size=402,234
-Collapsed=0
-
-[Window][2]
-Pos=60,60
-Size=344,180
-Collapsed=0
-
-[Window][1]
-Pos=60,60
-Size=344,180
-Collapsed=0
-
-[Window][0]
-Pos=60,60
-Size=344,180
-Collapsed=0
-
-[Window][4]
-Pos=85,79
-Size=344,180
-Collapsed=0
-
-[Window][5]
-Pos=60,60
-Size=344,180
-Collapsed=0
-
-[Window][3]
-Pos=60,60
-Size=344,180
-Collapsed=0
-
-[Window][hi]
-Pos=717,123
-Size=344,180
+[Window][PCG]
+Pos=60,554
+Size=500,236
 Collapsed=0
 
