Fps and ms graph

--- a/3D-Engine/Game/imgui.ini
+++ b/3D-Engine/Game/imgui.ini
@@ -25,6 +25,11 @@ Collapsed=0
 
 [Window][About]
 Pos=60,60
-Size=32,35
+Size=542,736
+Collapsed=0
+
+[Window][Configuration]
+Pos=337,169
+Size=665,383
 Collapsed=0
 
