json half implemented
need to save correctly the childrens

--- a/3D-Engine/3D Engine.vcxproj.filters
+++ b/3D-Engine/3D Engine.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Sources\Containers\MathGeoLib\Algorithm\Random">
       <UniqueIdentifier>{11e09397-081c-450e-ab1d-19081e0179f2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\Containers\Parson">
+      <UniqueIdentifier>{0b5ba55d-5d2c-4e5b-8fe8-cf72e9651811}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -276,6 +279,9 @@
     <ClInclude Include="MathGeoLib\Time\Clock.h">
       <Filter>Sources\Containers\MathGeoLib\Time</Filter>
     </ClInclude>
+    <ClInclude Include="parson\parson.h">
+      <Filter>Sources\Containers\Parson</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -421,6 +427,9 @@
     </ClCompile>
     <ClCompile Include="MathGeoLib\Time\Clock.cpp">
       <Filter>Sources\Containers\MathGeoLib\Time</Filter>
+    </ClCompile>
+    <ClCompile Include="parson\parson.c">
+      <Filter>Sources\Containers\Parson</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
